
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct floppy_raw_cmd {int cmd_count; int* cmd; int flags; } ;


 int FDRAWCMD ;
 int FD_RAW_INTR ;
 int drive_selector (int ) ;
 int ioctl (int,int ,struct floppy_raw_cmd*) ;
 int printf (char*,int) ;

void fd_recalibrate(int fd) {
                struct floppy_raw_cmd raw_cmd;
                int tmp;

                raw_cmd.flags = FD_RAW_INTR;
                raw_cmd.cmd_count = 2;


                raw_cmd.cmd[raw_cmd.cmd_count++] = 0x07;
                raw_cmd.cmd[raw_cmd.cmd_count++] = drive_selector(0);
                tmp = ioctl( fd, FDRAWCMD, &raw_cmd );
                printf("Status:%d\n",tmp);
}
