; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_44325.c_fd_recalibrate.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_44325.c_fd_recalibrate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.floppy_raw_cmd = type { i32, i32*, i32 }

@FD_RAW_INTR = common dso_local global i32 0, align 4
@FDRAWCMD = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [11 x i8] c"Status:%d\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @fd_recalibrate(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.floppy_raw_cmd, align 8
  %4 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %5 = load i32, i32* @FD_RAW_INTR, align 4
  %6 = getelementptr inbounds %struct.floppy_raw_cmd, %struct.floppy_raw_cmd* %3, i32 0, i32 2
  store i32 %5, i32* %6, align 8
  %7 = getelementptr inbounds %struct.floppy_raw_cmd, %struct.floppy_raw_cmd* %3, i32 0, i32 0
  store i32 2, i32* %7, align 8
  %8 = getelementptr inbounds %struct.floppy_raw_cmd, %struct.floppy_raw_cmd* %3, i32 0, i32 1
  %9 = load i32*, i32** %8, align 8
  %10 = getelementptr inbounds %struct.floppy_raw_cmd, %struct.floppy_raw_cmd* %3, i32 0, i32 0
  %11 = load i32, i32* %10, align 8
  %12 = add nsw i32 %11, 1
  store i32 %12, i32* %10, align 8
  %13 = sext i32 %11 to i64
  %14 = getelementptr inbounds i32, i32* %9, i64 %13
  store i32 7, i32* %14, align 4
  %15 = call i32 @drive_selector(i32 0)
  %16 = getelementptr inbounds %struct.floppy_raw_cmd, %struct.floppy_raw_cmd* %3, i32 0, i32 1
  %17 = load i32*, i32** %16, align 8
  %18 = getelementptr inbounds %struct.floppy_raw_cmd, %struct.floppy_raw_cmd* %3, i32 0, i32 0
  %19 = load i32, i32* %18, align 8
  %20 = add nsw i32 %19, 1
  store i32 %20, i32* %18, align 8
  %21 = sext i32 %19 to i64
  %22 = getelementptr inbounds i32, i32* %17, i64 %21
  store i32 %15, i32* %22, align 4
  %23 = load i32, i32* %2, align 4
  %24 = load i32, i32* @FDRAWCMD, align 4
  %25 = call i32 @ioctl(i32 %23, i32 %24, %struct.floppy_raw_cmd* %3)
  store i32 %25, i32* %4, align 4
  %26 = load i32, i32* %4, align 4
  %27 = call i32 @printf(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0), i32 %26)
  ret void
}

declare dso_local i32 @drive_selector(i32) #1

declare dso_local i32 @ioctl(i32, i32, %struct.floppy_raw_cmd*) #1

declare dso_local i32 @printf(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
